# 4you

./: .gitignore  README.md  form.md  pyproject.toml
accounts/: permissions.py  tests.py  urls.py  views.py
config/: settings.py  urls.py
core/: urls.py  views.py
employees/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
employees/management/commands/: seed_initial_data.py
employees/migrations/: 0001_initial.py  0002_alter_department_name.py  0003_remove_employee_age_employee_birth_date_position_and_more.py  0004_backfill_birth_date_and_position.py  0005_finalize_employee_position_and_birth_date.py  0006_position_base_salary_and_more.py  0007_employee_needs_profile_update.py
static/css/: styles.css
templates/: base.html
templates/accounts/: login.html
templates/core/: dashboard.html
templates/employees/: analytics.html  department_detail.html  departments.html  form.html  list.html
templates/employees/partials/: table.html
templates/partials/: alerts.html  pagination.html
