[project]
name = "4you-rh"
version = "0.1.0"
description = "Sistema Gerenciador de RH"
authors = [
    {name = "4you Team"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "django>=4.2.30,<5.0.0"
]

[tool.uv]
package = false


[build-system]
requires = ["hatchling>=1.26.3"]
build-backend = "hatchling.build"
